--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 LOG_LVL=INFO
-SEED=erode claim rapid rain swarm matrix hen predict story mimic reject caution shaft metal upgrade turkey radio clay tower total practice disease puppy fly
+SEED=apple ridge secret mango marble execute stem atom attack connect absent budget expire transfer cherry gallery arena ensure nature snow motor cream govern provide
+ADDRESS_PARSE=EQC5Oa_YvU2rjfQWlakx-7xpBYPW0ORawkSfdmT9I_wnO3n-
+JETTON_ADDRESS=EQDEsgCpKMKCU4AZJBndeOqBR9mnrLnNH_GKldF4AqBjVs-x
